Deployments/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hpa/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: hpa-service
            port:
              number: 8080 
    
      - path: /single-url/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: single-pod-service
            port:
              number: 8080 
    
      - path: /two-pod/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: two-name-nginx-service
            port:
              number: 80 
    
      - path: /two-cont/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-loadbalancer-service-two-cont
            port:
              number: 80 
    
      - path: /vpa/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: vpa-service
            port:
              number: 8080 
    
      - path: /two-node/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: two-node-loadbalancer-service
            port:
              number: 80
